merging everything